--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@ngneat/falso": "^6.4.0",
-    "axios": "^1.3.2"
+    "axios": "^1.3.2",
+    "dotenv": "^16.0.3"
   }
 }
